# zero-operators

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  pyproject.toml  setup.sh
.claude/: launch.json  settings.json
.claude/agents/: backend-engineer.md  code-reviewer.md  data-engineer.md  data-scout.md  documentation-agent.md  domain-evaluator.md  frontend-engineer.md  infra-engineer.md  init-architect.md  lead-orchestrator.md  ml-engineer.md  model-builder.md  oracle-qa.md  plan-architect.md  platform-code-reviewer.md  platform-test-engineer.md  research-scout.md  software-architect.md  test-engineer.md  training-checker.md  xai-agent.md
.claude/commands/: commit.md  zo-dev.md
.claude/hooks/: cascade-reminder.sh  pre-commit-validate.sh  session-start.sh  stop-check.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  validate-docs.yml
design/: brand-system-light.html  brand-system.html  font-pairings.html  logos.html  logos.js  styles.css  zero_operators_abstract_visuals.html  zero_operators_banners_safe_layout.html  zero_operators_brand_system.html  zero_operators_dual_tone_system.html  zero_operators_font_options.html  zero_operators_light_deck.html  zero_operators_logos.html  zero_operators_orbital_grid_expanded.html
design/banner/: README.md  render-node.mjs  render.mjs
design/vscode/: 00-overview.html  01-workbench.html  02-sidebar.html  03-terminal-panel.html  04-comms-feed.html  05-gate-approval.html  06-training-dashboard.html  07-start-run.html  08-status-and-palette.html  tokens.css
docs/: COMMANDS.md  DELIVERY_STRUCTURE.md  README.md  SAMPLE_PROJECT.md  TROUBLESHOOTING.md  acknowledgements.mdx  demo.html  installation.mdx  introduction.mdx  mint.json  quickstart.mdx  roadmap.mdx
docs/cli/: build.mdx  draft.mdx  init.mdx  overview.mdx
docs/concepts/: low-token-mode.mdx  memory-and-continuity.mdx  overview.mdx  phases-and-gates.mdx  the-oracle.mdx  the-plan.mdx  the-team.mdx
docs/reference/: cost-benchmark.mdx  low-token-preset.mdx
docs/source-design/: zero_operators_features_and_separation.html  zero_operators_full_design.html
logs/comms/: 2026-04-09.jsonl  2026-04-10.jsonl
logs/wrapper/: zo-mnist-digit-classifier-launch.sh  zo-mnist-digit-classifier-prompt.txt
memory/mnist-digit-classifier/: DECISION_LOG.md  STATE.md
memory/zo-platform/: DECISION_LOG.md  PRIORS.md  STATE.md
plan/: zero_operators_features_and_separation.html  zero_operators_full_design.html  zero_operators_full_design_v2.html
plans/: cifar10-classifier.md  mnist-digit-classifier.md  zero-operators-build.md
scripts/: benchmark_low_token.sh  validate-docs.sh
specs/: agents.md  architecture.md  comms.md  evolution.md  memory.md  oracle.md  plan.md  report_templates.md  watchdog.md  workflow.md
targets/: mnist-digit-classifier.target.md
tests/: conftest.py
website/: .codeowner-test  PLAN.md  astro.config.mjs  package-lock.json  package.json
(+148 files in other folders)
