[project]
name = "zero-operators"
version = "1.0.2"
description = "Autonomous AI research and engineering team system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sam"}]
keywords = [
    "ai",
    "agents",
    "claude",
    "claude-code",
    "ml",
    "machine-learning",
    "orchestration",
    "research-engineering",
    "autonomous-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "nbformat>=5.0",
]

[project.urls]
Homepage = "https://zerooperators.com"
Documentation = "https://docs.zerooperators.com"
Repository = "https://github.com/SamPlvs/zero-operators"
Issues = "https://github.com/SamPlvs/zero-operators/issues"
Changelog = "https://github.com/SamPlvs/zero-operators/blob/main/CHANGELOG.md"

[project.optional-dependencies]
semantic = [
    "fastembed>=0.3.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "zero-operators[semantic,dev]",
]

[project.scripts]
zo = "zo.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zo"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["zo"]
